@@ -2,6 +2,7 @@ python-reahl (5.2.0) unstable; urgency=low
 
  * Add Chart widget for plotly (#281).
  * Implemented CSRF protection (#153).
+ * Changed to use rssmin and rcsmin instead of slimit and cssmin (#336).
 
  -- Iwan Vosloo <iwan@reahl.org>  Thu, 17 June 2021 15:25:00 +0200
 
